--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #282c34;
 }
