--- a/client/src/components/Home/styles.css
+++ b/client/src/components/Home/styles.css
@@ -1,3 +1,5 @@
+@import "../../index.css";
+
 .home {
   height: 100%;
   display: flex;
@@ -10,19 +12,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.card {
-  margin: 0 20px;
-  color: #9c9c9c;
-  background-color: #f1ebeb;
-  border-radius: 10px;
-  min-width: 180px;
-  min-height: 280px;
-  padding: 3em 1em;
-  transition: box-shadow 0.5s ease-in-out;
-}
-
-.card:hover {
-  box-shadow: -3px 0px 5px red, 3px 0px 5px blue;
 }
